--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -523,12 +523,58 @@
    "cell_type": "markdown",
    "id": "14a73f9b",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### 14. Concatenate two dictionaries, summing the values of common keys. Find the key with the highest value in the resulting dictionary.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "48c878f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Region 'EW', type 'A' has a total of 6 units\n",
+      "Region 'EW', type 'C' has a total of 6 units\n",
+      "Region 'EW', type 'B' has a total of 3 units\n",
+      "Region 'EW', type 'E' has a total of 2 units\n"
+     ]
+    }
+   ],
+   "source": [
+    "def concatenate_dict(dict_1,dict_2) -> dict:\n",
+    "\n",
+    "    new_dict ={}\n",
+    "\n",
+    "    for item in dict_1:\n",
+    "        new_dict[item] = dict_1[item]\n",
+    "    \n",
+    "    for pair in dict_2:\n",
+    "        if pair not in new_dict:\n",
+    "            new_dict[pair] = dict_2[pair]\n",
+    "        else:\n",
+    "            new_dict[pair] += dict_2[pair]\n",
+    "    \n",
+    "    sorted_new_dict = sorted(new_dict.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    return sorted_new_dict\n",
+    "\n",
+    "east = {'a': 2, 'b': 3, 'c': 1}\n",
+    "west = {'a': 4, 'c': 5, 'e': 2} \n",
+    "\n",
+    "\n",
+    "res = concatenate_dict(east,west)\n",
+    "for elements in res:\n",
+    "    print(f\"Region 'EW', type '{elements[0].upper()}' has a total of {elements[1]} units\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48c878f2",
+   "id": "59f0f249",
    "metadata": {},
    "outputs": [],
    "source": []
