--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -572,12 +572,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a528e3f",
+   "metadata": {},
+   "source": [
+    "##### 15. Create a function that checks if:\n",
+    "- If the dictionary is empty, return True.\n",
+    "- all the keys have the same type, return True.\n",
+    "- all the values have the same type, return True.\n",
+    "- if the values are lists, check if the elements in the lists have the same type, return True.\n",
+    "- if any rules are broken, return False."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f0f249",
+   "id": "2e009e06",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def check_dictionary_consistency(data:dict)-> bool:\n",
+    "\n",
+    "    key_type_list = []\n",
+    "\n",
+    "    for key in data.keys():\n",
+    "        key_type_list.append(type(key))"
+   ]
   }
  ],
  "metadata": {
