--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -578,10 +578,9 @@
    "source": [
     "##### 15. Create a function that checks if:\n",
     "- If the dictionary is empty, return True.\n",
-    "- all the keys have the same type, return True.\n",
-    "- all the values have the same type, return True.\n",
-    "- if the values are lists, check if the elements in the lists have the same type, return True.\n",
-    "- if any rules are broken, return False."
+    "- all the keys have the same type.\n",
+    "- all the values have the same type.\n",
+    "- if the values are lists, check if the elements in the lists have the same type."
    ]
   },
   {
@@ -593,11 +592,108 @@
    "source": [
     "def check_dictionary_consistency(data:dict)-> bool:\n",
     "\n",
-    "    key_type_list = []\n",
+    "    # checking if empty\n",
+    "    if not data:\n",
+    "        return True\n",
+    "    \n",
+    "    # checking the keys\n",
+    "    key_list = []\n",
     "\n",
     "    for key in data.keys():\n",
-    "        key_type_list.append(type(key))"
+    "        key_list.append(key)\n",
+    "\n",
+    "        for element in key_list:\n",
+    "            if type(element) != type(element[0]):\n",
+    "                print(f\"Not all keys are of the same 'type'\")\n",
+    "                return False\n",
+    "            else:\n",
+    "                print(f\"All keys are of the same type: {type(element)}\")\n",
+    "\n",
+    "    #checking the values\n",
+    "    value_list = []\n",
+    "\n",
+    "    for value in data.values():\n",
+    "        value_list.append(value)\n",
+    "\n",
+    "        for item in value_list:\n",
+    "            if item != item[0]:\n",
+    "                print(\"Not all values are of the same 'type'\")\n",
+    "                return False\n",
+    "            else:\n",
+    "                print(f\"All values have the same type: {element[0]}\")\n",
+    "\n",
+    "    values_of_value_list = []\n",
+    "\n",
+    "    for value in data.values():\n",
+    "        if isinstance(value,list):\n",
+    "            values_of_value_list.append(value)\n",
+    "\n",
+    "            for x in values_of_value_list:\n",
+    "                if type(x[0]) != type(x):\n",
+    "                    print(\"Not all values inside a list of values are of the same 'type'\")\n",
+    "                    return False\n",
+    "                else:\n",
+    "                    print(f\"The values inside the list of value are of the same type {type(x)}\")\n",
+    "\n",
+    "# running some tests\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3142a0a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "same\n",
+      "different\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "carl = [3, 2.3, \"eles\", True, 3]\n",
+    "carl_type = []\n",
+    "\n",
+    "for x in carl:\n",
+    "    carl_type.append(type(x))\n",
+    "\n",
+    "\n",
+    "#for y in carl_type:\n",
+    "#    print(y)\n",
+    "\n",
+    "\n",
+    "def check():\n",
+    "    for x in carl:\n",
+    "        if type(carl[0]) != type(x):\n",
+    "            print(\"different\")\n",
+    "            return False\n",
+    "        else:\n",
+    "            print(\"same\")\n",
+    "\n",
+    "check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78f1f7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
