--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -585,10 +585,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2e009e06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All keys are of the same type: <class 'str'>\n",
+      "Not all values are of the same 'type'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def check_dictionary_consistency(data:dict)-> bool:\n",
     "\n",
@@ -606,8 +625,8 @@
     "            if type(element) != type(element[0]):\n",
     "                print(f\"Not all keys are of the same 'type'\")\n",
     "                return False\n",
-    "            else:\n",
-    "                print(f\"All keys are of the same type: {type(element)}\")\n",
+    "    else:\n",
+    "        print(f\"All keys are of the same type: {type(element)}\")\n",
     "\n",
     "    #checking the values\n",
     "    value_list = []\n",
@@ -616,11 +635,11 @@
     "        value_list.append(value)\n",
     "\n",
     "        for item in value_list:\n",
-    "            if item != item[0]:\n",
+    "            if type(item) != type(item[0]):\n",
     "                print(\"Not all values are of the same 'type'\")\n",
     "                return False\n",
-    "            else:\n",
-    "                print(f\"All values have the same type: {element[0]}\")\n",
+    "    else:\n",
+    "        print(f\"All values have the same type: {element[0]}\")\n",
     "\n",
     "    values_of_value_list = []\n",
     "\n",
@@ -632,11 +651,28 @@
     "                if type(x[0]) != type(x):\n",
     "                    print(\"Not all values inside a list of values are of the same 'type'\")\n",
     "                    return False\n",
-    "                else:\n",
-    "                    print(f\"The values inside the list of value are of the same type {type(x)}\")\n",
+    "        else:\n",
+    "            print(f\"The values inside the list of value are of the same type {type(x)}\")\n",
     "\n",
-    "# running some tests\n"
+    "# running some tests\n",
+    "\n",
+    "first = {\"alice\": [85,92,88], \"bob\": [73, 81],}\n",
+    "second = {\"alice\":[85,92], 42: [73,81],}\n",
+    "third = {\"alice\":[\"A\", \"B\"], \"bob\": [\"73\", \"81\"],}\n",
+    "fourth = {\"alice\": 2, \"bob\": \"b\",}\n",
+    "\n",
+    "check_dictionary_consistency(first)\n",
+    "#check_dictionary_consistency(second)\n",
+    "#check_dictionary_consistency(third)\n",
+    "#check_dictionary_consistency(fourth)\n",
+    "#check_dictionary_consistency({})\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "041f3bf5",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
