--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,8 @@
      "output_type": "stream",
      "text": [
       "All keys are of the same type: <class 'str'>\n",
-      "Not all values are of the same 'type'\n"
+      "All values have the same type: <class 'list'>\n",
+      "Not all values inside a list of values are of the same 'type'\n"
      ]
     },
     {
@@ -603,7 +604,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,17 +630,19 @@
     "        print(f\"All keys are of the same type: {type(element)}\")\n",
     "\n",
     "    #checking the values\n",
-    "    value_list = []\n",
+    "    value_list = [[1,2,3,4]]\n",
     "\n",
     "    for value in data.values():\n",
     "        value_list.append(value)\n",
     "\n",
     "        for item in value_list:\n",
-    "            if type(item) != type(item[0]):\n",
+    "            if type(item) != type(value_list[0]):\n",
     "                print(\"Not all values are of the same 'type'\")\n",
     "                return False\n",
     "    else:\n",
-    "        print(f\"All values have the same type: {element[0]}\")\n",
+    "        print(f\"All values have the same type: {type(value)}\")\n",
+    "\n",
+    "    # checking the values inside a value-list\n",
     "\n",
     "    values_of_value_list = []\n",
     "\n",
@@ -651,8 +654,8 @@
     "                if type(x[0]) != type(x):\n",
     "                    print(\"Not all values inside a list of values are of the same 'type'\")\n",
     "                    return False\n",
-    "        else:\n",
-    "            print(f\"The values inside the list of value are of the same type {type(x)}\")\n",
+    "    else:\n",
+    "        print(f\"The values inside the list of value are of the same type {type(x)}\")\n",
     "\n",
     "# running some tests\n",
     "\n",
