--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -595,18 +595,8 @@
      "text": [
       "All keys are of the same type: <class 'str'>\n",
       "All values have the same type: <class 'list'>\n",
-      "Not all values inside a list of values are of the same 'type'\n"
+      "The values inside the list are of the same type <class 'int'>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -630,7 +620,7 @@
     "        print(f\"All keys are of the same type: {type(element)}\")\n",
     "\n",
     "    #checking the values\n",
-    "    value_list = [[1,2,3,4]]\n",
+    "    value_list = []\n",
     "\n",
     "    for value in data.values():\n",
     "        value_list.append(value)\n",
@@ -648,14 +638,13 @@
     "\n",
     "    for value in data.values():\n",
     "        if isinstance(value,list):\n",
-    "            values_of_value_list.append(value)\n",
-    "\n",
-    "            for x in values_of_value_list:\n",
-    "                if type(x[0]) != type(x):\n",
-    "                    print(\"Not all values inside a list of values are of the same 'type'\")\n",
+    "            for x in value:\n",
+    "                #print(x,type(x))\n",
+    "                if type(value[0]) != type(x):\n",
+    "                    print(\"Not all values inside a list are of the same 'type'\")\n",
     "                    return False\n",
     "    else:\n",
-    "        print(f\"The values inside the list of value are of the same type {type(x)}\")\n",
+    "        print(f\"The values inside the list are of the same type {type(x)}\")\n",
     "\n",
     "# running some tests\n",
     "\n",
@@ -672,64 +661,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "041f3bf5",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3142a0a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "same\n",
-      "different\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "carl = [3, 2.3, \"eles\", True, 3]\n",
-    "carl_type = []\n",
-    "\n",
-    "for x in carl:\n",
-    "    carl_type.append(type(x))\n",
-    "\n",
-    "\n",
-    "#for y in carl_type:\n",
-    "#    print(y)\n",
-    "\n",
-    "\n",
-    "def check():\n",
-    "    for x in carl:\n",
-    "        if type(carl[0]) != type(x):\n",
-    "            print(\"different\")\n",
-    "            return False\n",
-    "        else:\n",
-    "            print(\"same\")\n",
-    "\n",
-    "check()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f1f7ed",
+   "id": "40b53825",
    "metadata": {},
    "outputs": [],
    "source": []
