--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -593,10 +593,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All keys are of the same type: <class 'str'>\n",
-      "All values have the same type: <class 'list'>\n",
-      "The values inside the list are of the same type <class 'int'>\n"
+      "Empty dictionary\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -604,6 +612,7 @@
     "\n",
     "    # checking if empty\n",
     "    if not data:\n",
+    "        print(\"Empty dictionary\")\n",
     "        return True\n",
     "    \n",
     "    # checking the keys\n",
@@ -653,11 +662,11 @@
     "third = {\"alice\":[\"A\", \"B\"], \"bob\": [\"73\", \"81\"],}\n",
     "fourth = {\"alice\": 2, \"bob\": \"b\",}\n",
     "\n",
-    "check_dictionary_consistency(first)\n",
+    "#check_dictionary_consistency(first)\n",
     "#check_dictionary_consistency(second)\n",
     "#check_dictionary_consistency(third)\n",
     "#check_dictionary_consistency(fourth)\n",
-    "#check_dictionary_consistency({})\n"
+    "check_dictionary_consistency({})\n"
    ]
   },
   {
