--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -593,18 +593,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty dictionary\n"
+      "All keys are of the same type: <class 'str'>\n",
+      "All values have the same type: <class 'list'>\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[75], line 57\u001b[0m\n\u001b[0;32m     53\u001b[0m fourth \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malice\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbob\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m,}\n\u001b[0;32m     55\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(first)\u001b[39;00m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(second)\u001b[39;00m\n\u001b[1;32m---> 57\u001b[0m \u001b[43mcheck_dictionary_consistency\u001b[49m\u001b[43m(\u001b[49m\u001b[43mthird\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(fourth)\u001b[39;00m\n\u001b[0;32m     59\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency({})\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[75], line 42\u001b[0m, in \u001b[0;36mcheck_dictionary_consistency\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[0;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value,\u001b[38;5;28mlist\u001b[39m):\n\u001b[0;32m     40\u001b[0m         \u001b[38;5;66;03m#for x in value:\u001b[39;00m\n\u001b[0;32m     41\u001b[0m             \u001b[38;5;66;03m#print(x,type(x))\u001b[39;00m\n\u001b[1;32m---> 42\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mtype\u001b[39m(value):\n\u001b[0;32m     43\u001b[0m                 \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot all values inside a list are of the same \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     44\u001b[0m                 \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 1"
+     ]
     }
    ],
    "source": [
@@ -622,7 +625,7 @@
     "        key_list.append(key)\n",
     "\n",
     "        for element in key_list:\n",
-    "            if type(element) != type(element[0]):\n",
+    "            if type(element) != type(ement[0]):\n",
     "                print(f\"Not all keys are of the same 'type'\")\n",
     "                return False\n",
     "    else:\n",
