--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -594,19 +594,8 @@
      "output_type": "stream",
      "text": [
       "All keys are of the same type: <class 'str'>\n",
-      "All values have the same type: <class 'list'>\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[75], line 57\u001b[0m\n\u001b[0;32m     53\u001b[0m fourth \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malice\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbob\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m,}\n\u001b[0;32m     55\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(first)\u001b[39;00m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(second)\u001b[39;00m\n\u001b[1;32m---> 57\u001b[0m \u001b[43mcheck_dictionary_consistency\u001b[49m\u001b[43m(\u001b[49m\u001b[43mthird\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(fourth)\u001b[39;00m\n\u001b[0;32m     59\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency({})\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[75], line 42\u001b[0m, in \u001b[0;36mcheck_dictionary_consistency\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[0;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value,\u001b[38;5;28mlist\u001b[39m):\n\u001b[0;32m     40\u001b[0m         \u001b[38;5;66;03m#for x in value:\u001b[39;00m\n\u001b[0;32m     41\u001b[0m             \u001b[38;5;66;03m#print(x,type(x))\u001b[39;00m\n\u001b[1;32m---> 42\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mtype\u001b[39m(value):\n\u001b[0;32m     43\u001b[0m                 \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot all values inside a list are of the same \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     44\u001b[0m                 \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 1"
+      "All values are of the same type: <class 'list'>\n",
+      "[[85, 92, 88], [73, 81]]\n"
      ]
     }
    ],
@@ -617,7 +606,7 @@
     "    if not data:\n",
     "        print(\"Empty dictionary\")\n",
     "        return True\n",
-    "    \n",
+    "        \n",
     "    # checking the keys\n",
     "    key_list = []\n",
     "\n",
@@ -625,8 +614,8 @@
     "        key_list.append(key)\n",
     "\n",
     "        for element in key_list:\n",
-    "            if type(element) != type(ement[0]):\n",
-    "                print(f\"Not all keys are of the same 'type'\")\n",
+    "            if type(element) != type(key_list[0]):\n",
+    "                print(f\"Not all keys are of the same type\")\n",
     "                return False\n",
     "    else:\n",
     "        print(f\"All keys are of the same type: {type(element)}\")\n",
@@ -639,24 +628,18 @@
     "\n",
     "        for item in value_list:\n",
     "            if type(item) != type(value_list[0]):\n",
-    "                print(\"Not all values are of the same 'type'\")\n",
+    "                print(\"Not all values are of the same type\")\n",
     "                return False\n",
     "    else:\n",
-    "        print(f\"All values have the same type: {type(value)}\")\n",
+    "        print(f\"All values are of the same type: {type(value)}\")\n",
+    "    print(value_list)\n",
     "\n",
-    "    # checking the values inside a value-list\n",
+    "    # checking if the values of the lists in a dictionary is the same\n",
+    "    \n",
     "\n",
-    "    values_of_value_list = []\n",
     "\n",
-    "    for value in data.values():\n",
-    "        if isinstance(value,list):\n",
-    "            for x in value:\n",
-    "                #print(x,type(x))\n",
-    "                if type(value[0]) != type(x):\n",
-    "                    print(\"Not all values inside a list are of the same 'type'\")\n",
-    "                    return False\n",
-    "    else:\n",
-    "        print(f\"The values inside the list are of the same type {type(x)}\")\n",
+    "    \n",
+    "\n",
     "\n",
     "# running some tests\n",
     "\n",
@@ -665,17 +648,37 @@
     "third = {\"alice\":[\"A\", \"B\"], \"bob\": [\"73\", \"81\"],}\n",
     "fourth = {\"alice\": 2, \"bob\": \"b\",}\n",
     "\n",
-    "#check_dictionary_consistency(first)\n",
+    "check_dictionary_consistency(first)\n",
     "#check_dictionary_consistency(second)\n",
     "#check_dictionary_consistency(third)\n",
     "#check_dictionary_consistency(fourth)\n",
-    "check_dictionary_consistency({})\n"
+    "#check_dictionary_consistency({})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "40b53825",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "listone = [[1,2,3],[4,5,6]]\n",
+    "\n",
+    "print(type(listone[0][0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b53825",
+   "id": "3fbf7798",
    "metadata": {},
    "outputs": [],
    "source": []
