--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -594,9 +594,18 @@
      "output_type": "stream",
      "text": [
       "All keys are of the same type: <class 'str'>\n",
-      "All values are of the same type: <class 'list'>\n",
-      "[[85, 92, 88], [73, 81]]\n"
+      "Not all values are of the same type\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -632,11 +641,14 @@
     "                return False\n",
     "    else:\n",
     "        print(f\"All values are of the same type: {type(value)}\")\n",
-    "    print(value_list)\n",
     "\n",
     "    # checking if the values of the lists in a dictionary is the same\n",
-    "    \n",
     "\n",
+    "    # for item in value_list:\n",
+    "    #     if isinstance(item,list):\n",
+    "    #         if value_list[0][0] != value_list[item][0]:\n",
+    "    #             print(\"The lists of the dictionary have elements of different type\")\n",
+    "    #             return False\n",
     "\n",
     "    \n",
     "\n",
@@ -645,13 +657,13 @@
     "\n",
     "first = {\"alice\": [85,92,88], \"bob\": [73, 81],}\n",
     "second = {\"alice\":[85,92], 42: [73,81],}\n",
-    "third = {\"alice\":[\"A\", \"B\"], \"bob\": [\"73\", \"81\"],}\n",
+    "third = {\"alice\":[\"A\", \"B\"], \"bob\": [73, 81],}\n",
     "fourth = {\"alice\": 2, \"bob\": \"b\",}\n",
     "\n",
-    "check_dictionary_consistency(first)\n",
+    "#check_dictionary_consistency(first)\n",
     "#check_dictionary_consistency(second)\n",
     "#check_dictionary_consistency(third)\n",
-    "#check_dictionary_consistency(fourth)\n",
+    "check_dictionary_consistency(fourth)\n",
     "#check_dictionary_consistency({})\n"
    ]
   },
