--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
     "#check_dictionary_consistency(first)\n",
     "#check_dictionary_consistency(second)\n",
     "#check_dictionary_consistency(third)\n",
-    "check_dictionary_consistency(fourth)\n",
+    "#check_dictionary_consistency(fourth)\n",
     "#check_dictionary_consistency({})\n"
    ]
   },
