--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -21,24 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e29019fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The initial dictionary:  {'name': 'Robert', 'age': 17, 'city': 'Dublin'} \n",
-      "\n",
-      "The second version of the dictionary: {'name': 'Robert', 'age': 17, 'city': 'Dublin', 'working student': False, 'sport': 'basketball'} \n",
-      "\n",
-      "The third version of the dictionary: {'name': 'Robert', 'age': 18, 'city': 'Dublin', 'working student': True, 'sport': 'basketball'} \n",
-      "\n",
-      "Robert 18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "student_datas = {\"name\" : \"Robert\", \"age\" : 17, \"city\" : \"Dublin\"}\n",
     "print (\"The initial dictionary: \", student_datas, \"\\n\")\n",
@@ -73,27 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "648581a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Robert', 'age': 18, 'city': 'Dublin', 'working student': True}\n",
-      "\n",
-      "\n",
-      "'City' is a key in the dict!\n",
-      "'Surname is not a key in the dict!\n",
-      "\n",
-      "\n",
-      "name age city working student \n",
-      "\n",
-      "Robert 18 Dublin True "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# remove \"sport\" from the dictionary\n",
     "\n",
@@ -135,18 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "57703c1e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Sangiovese': 12, 'Aglianico': 5, 'Merlot': 20}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_one = [\"Sangiovese\", \"Aglianico\", \"Merlot\"]\n",
     "list_two = [12,5,20]\n",
@@ -168,18 +129,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "d956b2a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wine_rep.clear()\n",
     "print(wine_rep)"
@@ -195,18 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "b98805d1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Ten': 10, 'Twenty': 20, 'Thirty': 20, 'Fourty': 40, 'Fifty': 50}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict1 = {'Ten': 10, 'Twenty': 20, 'Thirty': 30}\n",
     "dict2 = {'Thirty': 20, 'Fourty': 40, 'Fifty': 50}\n",
@@ -226,18 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "77414df7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 3, 'n': 3, 'd': 2, ' ': 8, 't': 3, 'h': 1, 'e': 4, 'y': 1, 's': 2, 'i': 3, 'w': 1, 'f': 1, 'o': 2, 'b': 2, 'r': 1, 'k': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "long_string = \"And they said it was fine to be broken\"\n",
     "\n",
@@ -262,18 +199,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "cece0589",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The name is Alice, the age is 30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "personal_data = {'person': {'name': 'Alice', 'age': 30}}\n",
     "\n",
@@ -290,18 +219,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "36e6e23a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Kelly': {'designation': 'Developer', 'salary': 8000}, 'Emma': {'designation': 'Developer', 'salary': 8000}, 'Ben': {'designation': 'Developer', 'salary': 8000}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "employees = ['Kelly', 'Emma', 'Ben']\n",
     "defaults = {\"designation\": 'Developer', \"salary\": 8000}\n",
@@ -323,18 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "6a90c3c7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Kelly', 'city': 'New york'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_dict = {\"name\": \"Kelly\",\"age\": 25,\"salary\": 8000,\"city\": \"New york\"}\n",
     "\n",
@@ -362,18 +275,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1fb9d65d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Bob': 95, 'Eve': 91, 'Alice': 88, 'Diana': 82, 'Charlie': 70}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores = {'Alice': 88,'Bob': 95,'Charlie': 70,'Diana': 82,'Eve': 91}\n",
     "\n",
@@ -392,30 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5f317348",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'c' is the first value of 3 found.\n"
-     ]
-    },
-    {
-     "ename": "LookupError",
-     "evalue": ">>> Value of '5' not found <<<",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>>> Value of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found <<<\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse_lookup(my_dict,val_1))\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreverse_lookup\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmy_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43mval_2\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[27], line 10\u001b[0m, in \u001b[0;36mreverse_lookup\u001b[1;34m(straight, val)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m straight[key] \u001b[38;5;241m==\u001b[39m val:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is the first value of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m found.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>>> Value of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found <<<\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mLookupError\u001b[0m: >>> Value of '5' not found <<<"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_dict = {'a': 1, 'b': 2, 'c': 3, 'd': 2}\n",
     "val_1 = 3\n",
@@ -443,23 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "9e6ede2c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fruits in the storage:\n",
-      "{20: ['apple', 'cherry', 'lemon', 'papaya'], 30: ['banana', 'elderberry', 'nectarine'], 40: ['date', 'grape'], 50: ['fig', 'kiwi', 'orange', 'quince'], 60: ['honeydew', 'mango']}\n",
-      "\n",
-      "\n",
-      "About the shop:\n",
-      "{'Client': ['Adams', 'Baker', 'Davis'], 'Director': ['Frank'], 'Manager': ['Peter'], 'Supplier': ['Nichols', 'Carter', 'Evans'], 'Supervisor': ['Owen', 'Bill']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def invert_key_value(base_dict: dict)-> dict:\n",
     "\n",
@@ -492,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "d5c9927c",
    "metadata": {},
    "outputs": [],
@@ -529,21 +401,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "48c878f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Region 'EW', type 'A' has a total of 6 units\n",
-      "Region 'EW', type 'C' has a total of 6 units\n",
-      "Region 'EW', type 'B' has a total of 3 units\n",
-      "Region 'EW', type 'E' has a total of 2 units\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def concatenate_dict(dict_1,dict_2) -> dict:\n",
     "\n",
@@ -593,8 +454,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All keys are of the same type: <class 'str'>\n",
-      "Not all values are of the same type\n"
+      "[['A', 'B'], [73, 81]]\n",
+      "<class 'str'>\n",
+      "['A', 'B']\n",
+      "[73, 81]\n",
+      "The items inside different lists are not of the same type\n"
      ]
     },
     {
@@ -603,7 +467,7 @@
        "False"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,43 +476,51 @@
     "def check_dictionary_consistency(data:dict)-> bool:\n",
     "\n",
     "    # checking if empty\n",
+    "\n",
     "    if not data:\n",
-    "        print(\"Empty dictionary\")\n",
-    "        return True\n",
-    "        \n",
-    "    # checking the keys\n",
-    "    key_list = []\n",
+    "        print()\n",
     "\n",
-    "    for key in data.keys():\n",
-    "        key_list.append(key)\n",
-    "\n",
-    "        for element in key_list:\n",
-    "            if type(element) != type(key_list[0]):\n",
-    "                print(f\"Not all keys are of the same type\")\n",
-    "                return False\n",
-    "    else:\n",
-    "        print(f\"All keys are of the same type: {type(element)}\")\n",
+    "    \n",
     "\n",
     "    #checking the values\n",
-    "    value_list = []\n",
+    "\n",
+    "    # value_list = []\n",
+    "\n",
+    "    # for value in data.values():\n",
+    "    #     value_list.append(value)\n",
+    "\n",
+    "    #     for item in value_list:\n",
+    "    #         if type(item) != type(value_list[0]):\n",
+    "    #             print(\"Not all values are of the same type\")\n",
+    "    #             return False\n",
+    "    # else:\n",
+    "    #     print(f\"All values are of the same type: {type(value)}\")\n",
+    "\n",
+    "    # for dictionary with List as values, and assuming that the List have items of the same type, check that the type of the item inside the lists\n",
+    "    # are of the same type.\n",
+    "\n",
+    "    container_lists = []\n",
     "\n",
     "    for value in data.values():\n",
-    "        value_list.append(value)\n",
+    "        if isinstance(value,list):\n",
+    "            container_lists.append(value)\n",
+    "    print(container_lists)\n",
     "\n",
-    "        for item in value_list:\n",
-    "            if type(item) != type(value_list[0]):\n",
-    "                print(\"Not all values are of the same type\")\n",
-    "                return False\n",
+    "    expected_type = type(container_lists[0][0])\n",
+    "    print(expected_type)\n",
+    "\n",
+    "    for lists in container_lists:\n",
+    "        print((lists))\n",
+    "        if type(lists[0]) != type(container_lists[lists][0]):\n",
+    "            print(\"The items inside different lists are not of the same type\")\n",
+    "        return False\n",
     "    else:\n",
-    "        print(f\"All values are of the same type: {type(value)}\")\n",
+    "        print(\"The lists in the dictionary have the same type\")\n",
+    "        \n",
     "\n",
-    "    # checking if the values of the lists in a dictionary is the same\n",
     "\n",
-    "    # for item in value_list:\n",
-    "    #     if isinstance(item,list):\n",
-    "    #         if value_list[0][0] != value_list[item][0]:\n",
-    "    #             print(\"The lists of the dictionary have elements of different type\")\n",
-    "    #             return False\n",
+    "\n",
+    "    \n",
     "\n",
     "    \n",
     "\n",
@@ -662,14 +534,14 @@
     "\n",
     "#check_dictionary_consistency(first)\n",
     "#check_dictionary_consistency(second)\n",
-    "#check_dictionary_consistency(third)\n",
+    "check_dictionary_consistency(third)\n",
     "#check_dictionary_consistency(fourth)\n",
     "#check_dictionary_consistency({})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "40b53825",
    "metadata": {},
    "outputs": [
