--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -478,23 +478,36 @@
     "    # checking if empty\n",
     "\n",
     "    if not data:\n",
-    "        print()\n",
+    "        print(\"Empty dictionary\")\n",
+    "        return True\n",
+    "        \n",
+    "    # checking the keys\n",
     "\n",
-    "    \n",
+    "    key_list = []\n",
+    "\n",
+    "    for key in data.keys():\n",
+    "        key_list.append(key)\n",
+    "\n",
+    "        for element in key_list:\n",
+    "            if type(element) != type(key_list[0]):\n",
+    "                print(f\"Not all keys are of the same type\")\n",
+    "                return False\n",
+    "    else:\n",
+    "        print(f\"All keys are of the same type: {type(element)}\")\n",
     "\n",
     "    #checking the values\n",
     "\n",
-    "    # value_list = []\n",
+    "    value_list = []\n",
     "\n",
-    "    # for value in data.values():\n",
-    "    #     value_list.append(value)\n",
+    "    for value in data.values():\n",
+    "        value_list.append(value)\n",
     "\n",
-    "    #     for item in value_list:\n",
-    "    #         if type(item) != type(value_list[0]):\n",
-    "    #             print(\"Not all values are of the same type\")\n",
-    "    #             return False\n",
-    "    # else:\n",
-    "    #     print(f\"All values are of the same type: {type(value)}\")\n",
+    "        for item in value_list:\n",
+    "            if type(item) != type(value_list[0]):\n",
+    "                print(\"Not all values are of the same type\")\n",
+    "                return False\n",
+    "    else:\n",
+    "        print(f\"All values are of the same type: {type(value)}\")\n",
     "\n",
     "    # for dictionary with List as values, and assuming that the List have items of the same type, check that the type of the item inside the lists\n",
     "    # are of the same type.\n",
@@ -504,16 +517,14 @@
     "    for value in data.values():\n",
     "        if isinstance(value,list):\n",
     "            container_lists.append(value)\n",
-    "    print(container_lists)\n",
+    "    # print(container_lists)\n",
     "\n",
     "    expected_type = type(container_lists[0][0])\n",
-    "    print(expected_type)\n",
     "\n",
-    "    for lists in container_lists:\n",
-    "        print((lists))\n",
-    "        if type(lists[0]) != type(container_lists[lists][0]):\n",
+    "    for lists in container_lists:        \n",
+    "        if type(lists[0]) != expected_type:\n",
     "            print(\"The items inside different lists are not of the same type\")\n",
-    "        return False\n",
+    "            return False\n",
     "    else:\n",
     "        print(\"The lists in the dictionary have the same type\")\n",
     "        \n",
