--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -454,20 +454,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['A', 'B'], [73, 81]]\n",
-      "<class 'str'>\n",
-      "['A', 'B']\n",
-      "[73, 81]\n",
-      "The items inside different lists are not of the same type\n"
+      "All keys are of the same type: <class 'str'>\n",
+      "All values are of the same type: <class 'list'>\n",
+      "The lists in the dictionary have the same type\n",
+      "Empty dictionary\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,20 +517,15 @@
     "        if isinstance(value,list):\n",
     "            container_lists.append(value)\n",
     "    # print(container_lists)\n",
-    "\n",
-    "    expected_type = type(container_lists[0][0])\n",
+    "    if container_lists:\n",
+    "        expected_type = type(container_lists[0][0])\n",
     "\n",
     "    for lists in container_lists:        \n",
     "        if type(lists[0]) != expected_type:\n",
     "            print(\"The items inside different lists are not of the same type\")\n",
     "            return False\n",
     "    else:\n",
-    "        print(\"The lists in the dictionary have the same type\")\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
+    "        print(\"The lists in the dictionary have the same type\")     \n",
     "\n",
     "    \n",
     "\n",
@@ -543,11 +537,117 @@
     "third = {\"alice\":[\"A\", \"B\"], \"bob\": [73, 81],}\n",
     "fourth = {\"alice\": 2, \"bob\": \"b\",}\n",
     "\n",
+    "check_dictionary_consistency(first)\n",
+    "#check_dictionary_consistency(second)\n",
+    "#check_dictionary_consistency(third)\n",
+    "#check_dictionary_consistency(fourth)\n",
+    "check_dictionary_consistency({})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c21fd161",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty dictionary\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'element' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[37], line 76\u001b[0m\n\u001b[0;32m     69\u001b[0m fourth \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malice\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbob\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m,}\n\u001b[0;32m     72\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(first)\u001b[39;00m\n\u001b[0;32m     73\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(second)\u001b[39;00m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(third)\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m#check_dictionary_consistency(fourth)\u001b[39;00m\n\u001b[1;32m---> 76\u001b[0m \u001b[43mcheck_dictionary_consistency\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[37], line 6\u001b[0m, in \u001b[0;36mcheck_dictionary_consistency\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_dictionary_consistency\u001b[39m(data:\u001b[38;5;28mdict\u001b[39m)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n\u001b[0;32m      5\u001b[0m     checking_empy_dict(data)\n\u001b[1;32m----> 6\u001b[0m     \u001b[43mchecking_type_dict_keys\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m     checking_type_of_dict_values(data)\n\u001b[0;32m      8\u001b[0m     check_type_values_of_different_lists(data)\n",
+      "Cell \u001b[1;32mIn[37], line 30\u001b[0m, in \u001b[0;36mchecking_type_dict_keys\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 30\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll keys are of the same type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[43melement\u001b[49m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'element' where it is not associated with a value"
+     ]
+    }
+   ],
+   "source": [
+    "# The previous code has been re-written including the different loop inside different function, for clearity and readability.\n",
+    "\n",
+    "def check_dictionary_consistency(data:dict)-> bool:\n",
+    "\n",
+    "    checking_empy_dict(data)\n",
+    "    checking_type_dict_keys(data)\n",
+    "    checking_type_of_dict_values(data)\n",
+    "    check_type_values_of_different_lists(data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def checking_empy_dict(data):\n",
+    "\n",
+    "    if not data:\n",
+    "        print(\"Empty dictionary\")\n",
+    "        return True\n",
+    "\n",
+    "def checking_type_dict_keys(data):\n",
+    "    \n",
+    "    key_list = []\n",
+    "\n",
+    "    for key in data.keys():\n",
+    "        key_list.append(key)\n",
+    "\n",
+    "        for element in key_list:\n",
+    "            if type(element) != type(key_list[0]):\n",
+    "                print(f\"Not all keys are of the same type\")\n",
+    "                return False\n",
+    "    else:\n",
+    "        print(f\"All keys are of the same type: {type(element)}\")\n",
+    "        \n",
+    "\n",
+    "def checking_type_of_dict_values(data):\n",
+    "\n",
+    "    value_list = []\n",
+    "\n",
+    "    for value in data.values():\n",
+    "        value_list.append(value)\n",
+    "\n",
+    "        for item in value_list:\n",
+    "            if type(item) != type(value_list[0]):\n",
+    "                print(\"Not all values are of the same type\")\n",
+    "                return False\n",
+    "    else:\n",
+    "        print(f\"All values are of the same type: {type(value)}\")\n",
+    "        \n",
+    "\n",
+    "def check_type_values_of_different_lists(data):\n",
+    "\n",
+    "    container_lists = []\n",
+    "\n",
+    "    for value in data.values():\n",
+    "        if isinstance(value,list):\n",
+    "            container_lists.append(value)\n",
+    "    # print(container_lists)\n",
+    "    if container_lists:\n",
+    "        expected_type = type(container_lists[0][0])\n",
+    "\n",
+    "    for lists in container_lists:        \n",
+    "        if type(lists[0]) != expected_type:\n",
+    "            print(\"The items inside different lists are not of the same type\")\n",
+    "            return False\n",
+    "    else:\n",
+    "        print(\"The lists in the dictionary have the same type\")   \n",
+    "\n",
+    "first = {\"alice\": [85,92,88], \"bob\": [73, 81],}\n",
+    "second = {\"alice\":[85,92], 42: [73,81],}\n",
+    "third = {\"alice\":[\"A\", \"B\"], \"bob\": [73, 81],}\n",
+    "fourth = {\"alice\": 2, \"bob\": \"b\",}\n",
+    "\n",
+    "\n",
     "#check_dictionary_consistency(first)\n",
     "#check_dictionary_consistency(second)\n",
-    "check_dictionary_consistency(third)\n",
+    "#check_dictionary_consistency(third)\n",
     "#check_dictionary_consistency(fourth)\n",
-    "#check_dictionary_consistency({})\n"
+    "check_dictionary_consistency({})\n"
    ]
   },
   {
