--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2e009e06",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
     "                return False\n",
     "    else:\n",
     "        print(f\"All values are of the same type: {type(value)}\")\n",
-    "\n",
+    "+\n",
     "    # for dictionary with List as values, and assuming that the List have items of the same type, check that the type of the item inside the lists\n",
     "    # are of the same type.\n",
     "\n",
@@ -537,11 +537,11 @@
     "third = {\"alice\":[\"A\", \"B\"], \"bob\": [73, 81],}\n",
     "fourth = {\"alice\": 2, \"bob\": \"b\",}\n",
     "\n",
-    "check_dictionary_consistency(first)\n",
+    "#check_dictionary_consistency(first)\n",
     "#check_dictionary_consistency(second)\n",
     "#check_dictionary_consistency(third)\n",
     "#check_dictionary_consistency(fourth)\n",
-    "check_dictionary_consistency({})\n"
+    "#check_dictionary_consistency({})\n"
    ]
   }
  ],
