--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -446,31 +446,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2e009e06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All keys are of the same type: <class 'str'>\n",
-      "All values are of the same type: <class 'list'>\n",
-      "The lists in the dictionary have the same type\n",
-      "Empty dictionary\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def check_dictionary_consistency(data:dict)-> bool:\n",
     "\n",
@@ -507,7 +486,7 @@
     "                return False\n",
     "    else:\n",
     "        print(f\"All values are of the same type: {type(value)}\")\n",
-    "+\n",
+    "\n",
     "    # for dictionary with List as values, and assuming that the List have items of the same type, check that the type of the item inside the lists\n",
     "    # are of the same type.\n",
     "\n",
@@ -543,6 +522,40 @@
     "#check_dictionary_consistency(fourth)\n",
     "#check_dictionary_consistency({})\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9d439125",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> [7]\n",
+      "<class 'int'> [5]\n",
+      "<class 'int'> ['dddd']\n",
+      "[[7], [5], ['dddd']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ffif = [[7],[5],[\"dddd\"]]\n",
+    "\n",
+    "for idx, val in enumerate(ffif):\n",
+    "    print(type(idx), val)\n",
+    "\n",
+    "print(ffif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bda4cfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
