--- a/oops.ipynb
+++ b/oops.ipynb
@@ -425,9 +425,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94eb2cdf",
+   "metadata": {},
+   "source": [
+    "##### 10. Create a class, then add attribute without defining it in the init method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cc4c40de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fox are 4 legs animal, Omnivor, of the family canidea.\n",
+      "cow are 4 legs animal, Erbivor, of the family Bovidae.\n",
+      "fox eat almost anithings\n",
+      "cow does not eat meat.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal():\n",
+    "    \"The animal kindom object\"\n",
+    "\n",
+    "\n",
+    "fox = Animal()\n",
+    "\n",
+    "fox.name = \"fox\"\n",
+    "fox.diet = \"Omnivor\"\n",
+    "fox.legs = 4\n",
+    "fox.family = \"canidea\"\n",
+    "\n",
+    "def __str__(self):\n",
+    "\n",
+    "    return f\"{self.name} are {self.legs} legs animal, {self.diet}, of the family {self.family}.\"\n",
+    "\n",
+    "Animal.__str__ = __str__\n",
+    "\n",
+    "print(fox)\n",
+    "\n",
+    "cow = Animal()\n",
+    "cow.name = \"cow\"\n",
+    "cow.legs = 4\n",
+    "cow.diet = \"Erbivor\"\n",
+    "cow.family = \"Bovidae\"\n",
+    "\n",
+    "def dietary(self):\n",
+    "\n",
+    "    if self.diet == \"Omnivor\":\n",
+    "        return(f\"{self.name} eat almost anithings\")\n",
+    "    elif self.diet == \"Erbivor\":\n",
+    "        return(f\"{self.name} does not eat meat.\")\n",
+    "\n",
+    "Animal.dietary = dietary\n",
+    "\n",
+    "print(cow)\n",
+    "\n",
+    "\n",
+    "print(fox.dietary())\n",
+    "print(cow.dietary())\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc4c40de",
+   "id": "d3b6b3e3",
    "metadata": {},
    "outputs": [],
    "source": []
