--- a/oops.ipynb
+++ b/oops.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f8d66ed8",
    "metadata": {},
    "outputs": [],
@@ -492,12 +492,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cc1c2d9",
+   "metadata": {},
+   "source": [
+    "##### 11. Create a Bank Account class, with attributes like account number, balance, and account holder name. Then create methods to deposit, withdraw, and check the balance.  You also need to be able to calculate fixed interest on the balance and fixed fees (they are constant values linked to the class)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d3b6b3e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class BankAccount:\n",
+    "\n",
+    "    fee_amount = 30\n",
+    "    interest_rate = 0.2\n",
+    "\n",
+    "    def __init__(self, name: str, balance: float, max_withdraw: float)-> None:\n",
+    "\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.max_withdraw = max_withdraw\n",
+    "\n",
+    "\n",
+    "    def deposit(self, amount: float)-> None:\n",
+    "\n",
+    "        if amount > 0:\n",
+    "            self.balance += amount\n",
+    "        else:\n",
+    "            print(\"The amount entered must to be bigger than 0\")\n",
+    "\n",
+    "\n",
+    "    def withdraw(self, amount: float) -> None:\n",
+    "\n",
+    "        if amount <= self.balance and amount <= self.max_withdraw:\n",
+    "            self.balance -= amount\n",
+    "        else:\n",
+    "            print(f\"Withdraw failed: check your balance or the 'withdraw' limit.\")\n",
+    "\n",
+    "    def apply_fee() ->\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "        \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
