--- a/oops.ipynb
+++ b/oops.ipynb
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d3b6b3e3",
    "metadata": {},
    "outputs": [],
@@ -533,7 +533,29 @@
     "        else:\n",
     "            print(f\"Withdraw failed: check your balance or the 'withdraw' limit.\")\n",
     "\n",
-    "    def apply_fee() ->\n",
+    "\n",
+    "    def apply_fee(self) -> None:\n",
+    "\n",
+    "        self.balance -= self.fee_amount\n",
+    "\n",
+    "\n",
+    "    def apply_interest(self) -> None:\n",
+    "\n",
+    "        self.balance *= self.interest_rate\n",
+    "\n",
+    "    \n",
+    "    def get_balance(self) -> float:\n",
+    "\n",
+    "        return self.balance\n",
+    "    \n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "\n",
+    "        return f\"Account on behalfe of {self.name}\\n Balance: {self.balance}\\n Interest rate: {self.interest_rate}\\n Bank Fee: {self.fee_amount}\"\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    \n",
     "\n",
     "    \n",
     "\n",
@@ -541,6 +563,14 @@
     "        \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bcf8745",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
