--- a/oops.ipynb
+++ b/oops.ipynb
@@ -501,21 +501,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d3b6b3e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180.0\n",
+      "270\n",
+      "Account of Alice\n",
+      " Balance: 180.0\n",
+      " Interest rate: 0.2\n",
+      " Bank Fee: 30\n",
+      "Withdraw failed: check your balance or the 'withdraw' limit.\n",
+      "Withdraw failed: check your balance or the 'withdraw' limit.\n",
+      "You can't deposit a negative amount.\n"
+     ]
+    }
+   ],
    "source": [
     "class BankAccount:\n",
     "\n",
     "    fee_amount = 30\n",
     "    interest_rate = 0.2\n",
     "\n",
-    "    def __init__(self, name: str, balance: float, max_withdraw: float)-> None:\n",
+    "    def __init__(self, name: str, max_withdraw: float, balance: float = 0)-> None:\n",
     "\n",
-    "        self.name = name\n",
-    "        self.balance = balance\n",
+    "        self.name = name        \n",
     "        self.max_withdraw = max_withdraw\n",
+    "        self.balance = balance\n",
     "\n",
     "\n",
     "    def deposit(self, amount: float)-> None:\n",
@@ -523,7 +539,7 @@
     "        if amount > 0:\n",
     "            self.balance += amount\n",
     "        else:\n",
-    "            print(\"The amount entered must to be bigger than 0\")\n",
+    "            print(\"You can't deposit a negative amount.\")\n",
     "\n",
     "\n",
     "    def withdraw(self, amount: float) -> None:\n",
@@ -541,7 +557,7 @@
     "\n",
     "    def apply_interest(self) -> None:\n",
     "\n",
-    "        self.balance *= self.interest_rate\n",
+    "        self.balance += self.balance * self.interest_rate\n",
     "\n",
     "    \n",
     "    def get_balance(self) -> float:\n",
@@ -551,23 +567,35 @@
     "    \n",
     "    def __str__(self) -> str:\n",
     "\n",
-    "        return f\"Account on behalfe of {self.name}\\n Balance: {self.balance}\\n Interest rate: {self.interest_rate}\\n Bank Fee: {self.fee_amount}\"\n",
+    "        return f\"Account of {self.name}\\n Balance: {self.balance}\\n Interest rate: {self.interest_rate}\\n Bank Fee: {self.fee_amount}\"\n",
     "    \n",
     "\n",
     "\n",
-    "    \n",
+    "alice = BankAccount(\"Alice\", 500) \n",
+    "bob = BankAccount(\"Bob\", 100)\n",
     "\n",
-    "    \n",
+    "alice.deposit(200)\n",
+    "bob.deposit(300)\n",
+    "alice.withdraw(50)\n",
     "\n",
+    "alice.apply_interest()\n",
+    "bob.apply_fee()\n",
     "\n",
-    "        \n",
+    "print(alice.get_balance())\n",
+    "print(bob.get_balance())\n",
+    "\n",
+    "print(alice)\n",
+    "\n",
+    "bob.withdraw(200)\n",
+    "alice.withdraw(200)\n",
+    "alice.deposit(-10) ++++_       \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bcf8745",
+   "id": "0051cd6a",
    "metadata": {},
    "outputs": [],
    "source": []
