--- a/oops.ipynb
+++ b/oops.ipynb
@@ -588,7 +588,7 @@
     "\n",
     "bob.withdraw(200)\n",
     "alice.withdraw(200)\n",
-    "alice.deposit(-10) ++++_       \n",
+    "alice.deposit(-10)        \n",
     "    "
    ]
   },
