--- a/oops.ipynb
+++ b/oops.ipynb
@@ -593,9 +593,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9801019",
+   "metadata": {},
+   "source": [
+    "##### 12. Rock, Paper, Scissors Game: Create a Player Class and a Move Class. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0051cd6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anna wins!\n",
+      "Anna score: 1\n",
+      "Bill score: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Player:\n",
+    "\n",
+    "    def __init__(self, name: str, score: int = 0) -> None:\n",
+    "        self.name = name\n",
+    "        self.score = score\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.name} score: {self.score}\"\n",
+    "\n",
+    "\n",
+    "class Move:\n",
+    "\n",
+    "    def __init__(self, choice: str) -> None:\n",
+    "        self.choice = choice.lower()\n",
+    "\n",
+    "    def game_logic(self, player_1: Player, p1_move, player_2: Player, p2_move):\n",
+    "\n",
+    "        if p1_move.choice == p2_move.choice:\n",
+    "            print(\"It's a tie!\")\n",
+    "            return\n",
+    "        \n",
+    "        if p1_move.choice == \"paper\" and p2_move.choice == \"rock\":\n",
+    "            player_1.score += 1\n",
+    "            print(f\"{player_1.name} wins!\")\n",
+    "        \n",
+    "        elif p1_move.choice == \"rock\" and p2_move.choice == \"scissors\":\n",
+    "            player_1.score += 1\n",
+    "            print(f\"{player_1.name} wins!\")\n",
+    "\n",
+    "        elif p1_move.choice == \"scissors\" and p2_move.choice == \"paper\":\n",
+    "            player_1.score += 1\n",
+    "            print(f\"{player_1.name} wins!\")\n",
+    "\n",
+    "        else:\n",
+    "            player_2.score += 1\n",
+    "            print(f\"{player_2.name} wins!\")\n",
+    "\n",
+    "\n",
+    "anna = Player(\"Anna\")\n",
+    "bill = Player(\"Bill\")\n",
+    "\n",
+    "anna_move = Move(input(\"Anna, choose 'rock', 'paper' or 'scissor'\"))\n",
+    "bill_move = Move(input(\"Bill, choose 'rock', 'paper' or 'scissor'\"))\n",
+    "\n",
+    "anna_move.game_logic(anna, anna_move, bill, bill_move)\n",
+    "\n",
+    "print(anna)\n",
+    "print(bill)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0051cd6a",
+   "id": "e6e30266",
    "metadata": {},
    "outputs": [],
    "source": []
