--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -551,8 +551,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "5bab7424",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selman\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = {\"name\": \"Selman\"}\n",
+    "age = user.get(\"name\")\n",
+    "print(age)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5850ec62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'no found'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config = {\"settings\": {\"theme\": \"dark\"}}\n",
+    "theme = config.get(\"settings\", {}).get(\"thee\", \"no found\")\n",
+    "theme"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0bda4cfb",
+   "id": "7a06660e",
    "metadata": {},
    "outputs": [],
    "source": []
