--- a/lists.ipynb
+++ b/lists.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "1479246e",
    "metadata": {},
    "outputs": [
@@ -705,9 +705,9 @@
     "\n",
     "def union(list_1, list_2):\n",
     "\n",
-    "    union = []\n",
-    "    for elements in list_1:\n",
-    "            union.append(elements)\n",
+    "    union =list_1.copy()\n",
+    "    #for elements in list_1:\n",
+    "    #        union.append(elements)\n",
     "\n",
     "    for num in list_2:\n",
     "        if num not in list_1:\n",
@@ -797,9 +797,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "703f7c26",
+   "metadata": {},
+   "source": [
+    "##### 21. Some slicing exercises: create a list of 10 random numbers (do it manually), then extract:\n",
+    "- The 7th element\n",
+    "- The first 6 elements\n",
+    "- The last 4 elements\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cdb70048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "[7, 8, 9, 10]\n",
+      "[7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "seventh = numbers[6]\n",
+    "first_six = numbers[:6]\n",
+    "last_four = numbers[-4:]\n",
+    "\n",
+    "print(seventh)\n",
+    "print(first_six)\n",
+    "print(last_four)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea954498",
    "metadata": {},
    "outputs": [],
    "source": []
