--- a/files_handling.ipynb
+++ b/files_handling.ipynb
@@ -327,9 +327,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09dec0a1",
+   "metadata": {},
+   "source": [
+    "##### 11. Create a file, write on it, then read the file and return an histogram of the words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "439ceb1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attempt = \"Do you come from a land down under. Where women glow and men plunder? Can't you hear, can't you hear the thunder? You better run, you better take cover\"\n",
+    "new_attempt_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\new_attempt.txt\"\n",
+    "\n",
+    "def create_file(new_attempt_file, attempt) -> \n",
+    "\n",
+    "    with open(new_attempt_file, \"w\") as file:\n",
+    "\n",
+    "        return file.write(attempt)\n",
+    "\n",
+    "\n",
+    "    with open(new_attempt_file) as same_file:\n",
+    "        file_per_histo = same_file.read()\n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e6808a5",
    "metadata": {},
    "outputs": [],
    "source": []
